--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -6,8 +6,26 @@
           <div class="card-body">
             <h4 class="card-title">Barra de progreso</h4>
             <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+              <div class="progress-bar progress-bar-striped progress-bar-animated" 
+                role="progressbar" 
+                [attr.ariaValueNow]="progreso" 
+                aria-valuenow="50" 
+                aria-valuemin="0" 
+                aria-valuemax="100" 
+                [style.width]="progreso + '%'">
+              </div>
             </div>
+            <br>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" 
+                  role="progressbar" 
+                  [attr.ariaValueNow]="progreso" 
+                  aria-valuenow="50" 
+                  aria-valuemin="0" 
+                  aria-valuemax="100" 
+                  [style.width]="progreso + '%'">
+                </div>
+              </div>
           </div>
       </div>
   </div>
@@ -17,19 +35,7 @@
   <div class="col-6">
       <div class="card">
           <div class="card-body">
-            <div class="input-group">
-              <span class="input-group-btn">
-                <button class="btn btn-primary" type="button">
-                  <i class="mdi mdi-minus"></i>
-                </button>
-              </span>
-              <input type="text" class="form-control">
-              <span class="input-group-btn">
-                <button class="btn btn-primary" type="button">
-                    <i class="mdi mdi-plus"></i>
-                </button>
-              </span>
-            </div>
+            <app-incrementador nombre="Progress azul" [progreso]="20"></app-incrementador>
           </div>
       </div>
   </div>
@@ -37,7 +43,7 @@
   <div class="col-6">
       <div class="card">
           <div class="card-body">
-            texto 2
+            <app-incrementador nombre="Progress verde"></app-incrementador>
           </div>
       </div>
   </div>
