--- a/src/app/components/incrementador/incrementador.component.html
+++ b/src/app/components/incrementador/incrementador.component.html
@@ -6,10 +6,14 @@
     </button>
   </span>
   <input 
-    type="text" 
+    #txtProgress
+    type="number" 
     class="form-control" 
     name="progreso" 
-    [(ngModel)]="progreso">
+    [(ngModel)]="progreso"
+    (ngModelChange)="onChanges($event)"
+    min="1"
+    max=100>
   <span class="input-group-btn">
     <button class="btn btn-primary" type="button" (click)="cambiarValor(+5)">
         <i class="mdi mdi-plus"></i>
