--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -8,22 +8,22 @@
             <div class="progress">
               <div class="progress-bar progress-bar-striped progress-bar-animated" 
                 role="progressbar" 
-                [attr.ariaValueNow]="progreso" 
+                [attr.ariaValueNow]="progreso1" 
                 aria-valuenow="50" 
                 aria-valuemin="0" 
                 aria-valuemax="100" 
-                [style.width]="progreso + '%'">
+                [style.width]="progreso1 + '%'">
               </div>
             </div>
             <br>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" 
                   role="progressbar" 
-                  [attr.ariaValueNow]="progreso" 
+                  [attr.ariaValueNow]="progreso2" 
                   aria-valuenow="50" 
                   aria-valuemin="0" 
                   aria-valuemax="100" 
-                  [style.width]="progreso + '%'">
+                  [style.width]="progreso2 + '%'">
                 </div>
               </div>
           </div>
@@ -35,15 +35,23 @@
   <div class="col-6">
       <div class="card">
           <div class="card-body">
-            <app-incrementador nombre="Progress azul" [progreso]="20"></app-incrementador>
+            <app-incrementador 
+              (actualizaValor)="progreso1 = $event" 
+              nombre="Progress azul" 
+              [progreso]="progreso1">
+            </app-incrementador>
           </div>
-      </div>
+      </div>s
   </div>
 
   <div class="col-6">
       <div class="card">
           <div class="card-body">
-            <app-incrementador nombre="Progress verde"></app-incrementador>
+            <app-incrementador 
+              (actualizaValor)="progreso2 = $event" 
+              nombre="Progress verde" 
+              [progreso]="progreso2">
+            </app-incrementador>
           </div>
       </div>
   </div>
