--- a/src/app/pages/medicos/medicos.component.html
+++ b/src/app/pages/medicos/medicos.component.html
@@ -39,7 +39,7 @@
                           <img [src]="medico.img | imagen:'medico'" class="img-50 img-circle">
                         </td>
                         <td>{{ medico.nombre }}</td>
-                        <td>{{ medico.hospital.nombre }}</td>
+                        <td>{{ medico.hospital }}</td>
                     <td>
                         <button [routerLink]="['/medico', medico.id]" class="btn btn-primary">
                             <i class="fa fa-edit"></i>
